[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keiba-scraping"
version = "1.0.0"
description = "netkeibaおよびJRAから競馬データをスクレイピングするPythonライブラリ"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Kubo-Tech"}
]
keywords = ["keiba", "jra", "scraping", "netkeiba", "horse-racing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "selenium>=4.10.0",
    "playwright>=1.30.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-dotenv>=0.5.2",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-annotations>=3.0.0",
    "pep8-naming>=0.13.0",
    "darglint>=1.8.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
    "types-requests>=2.28.0",
    "types-beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/KeibaAI-developer/keiba-scraping"
Documentation = "https://github.com/KeibaAI-developer/keiba-scraping/blob/main/README.md"
Repository = "https://github.com/KeibaAI-developer/keiba-scraping"
Issues = "https://github.com/KeibaAI-developer/keiba-scraping/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["scraping*"]

[tool.setuptools.package-data]
scraping = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_unimported = false
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_optional = true
strict_equality = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
disable_error_code = ["attr-defined", "import-untyped"]

[[tool.mypy.overrides]]
module = "test.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=scraping",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: 単体テスト",
    "integration: 結合テスト",
    "slow: 実行に時間がかかるテスト",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["scraping"]
omit = [
    "*/test/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
